service-multitool.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-service
spec:
  selector:
    app: multitool
  ports:
  - port: 81
    targetPort: 80
