service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
