ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  labels:
    name: ingress-myapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-domain.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80

  - host: my-domain.ru
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: multitool-service
            port: 
              number: 81
